tests/agl/rejections/type/named_only_non_bare_positional.agl
def g(x: int, *, z: int) -> int = x + z
g(1, 2 + 0)
